# projecc

./: .gitignore  README.md  pyproject.toml
logo/: logo.ai
notebooks/: UsingProjecc.ipynb
projecc/: PMa_sensitivity.py
