[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "projecc"
version = "1.1.9"
description = "A small simple package for projecting orbital elements onto sky plane and vice versa"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Logan Pearce", email = "lapearce@umich.edu" }
]
dependencies = [
  "numpy",
  "astropy",
  "astroquery",
]
urls = { Homepage = "https://github.com/logan-pearce/projecc" }

[project.scripts]
pma-sensitivity = "projecc.PMa_sensitivity:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
projecc = ["zeta-values.csv"]

[tool.setuptools.packages.find]
include = ["projecc*"]
